syntax = "proto3";
package nolus.feerefunder;

import "gogoproto/gogo.proto";
import "nolus/feerefunder/fee.proto";

option go_package = "github.com/Nolus-Protocol/nolus-core/x/feerefunder/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  Fee min_fee = 1 [(gogoproto.nullable) = false];
}
